--- a/css/style.css
+++ b/css/style.css
@@ -54,153 +54,163 @@ table {
 }
 body{
   font-family: "Noto Sans TC", sans-serif; 
-  font-weight: 500;
-  line-height: 1.5;
 }
 .menu{
-  display:flex;
+  display: flex;
   justify-content: center;
-  font-weight: 800;
+  font-weight: 700;
   gap: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 24px 0;
 }
-.menu li{
+.menu a{
   font-size: 28px;
   font-weight: 700;
+  color: #000;
+  text-decoration: none;
 }
 .menu li:hover{
   background: yellow;
 }
 .banner{
   display: flex;
+  border: 1px solid #6C757D;
 }
-.banner .people{
-  width: 50%;
-  border-bottom: 1px solid #000; 
+.banner img{
+  max-width: 50%;
 }
-.banner .people img{
-  width: 100%;
-  vertical-align: middle;
-}
-.banner .into{
-  display: flex;
+.banner .into{  
   flex-direction: column;
-  justify-content: center;
-  background-image: url(https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/Hero%20Section2.png?raw=true);
-  width: 50%;
-  padding-left: 80px;
+  align-self: center;
+  max-width: 50%;
+  padding-left: 24px; 
+  line-height: 1.5; 
 }
-.banner .into h1{
-  font-size: 120px;
-  font-weight: 900;
+.banner .into h3{
   color: #0027D5;
+  font-size: 24px;
 }
-.banner .into p{
-  font-size: 28px;
+.banner .into a{
   font-weight: 700;
+  text-decoration: none;
+  color: #FFF;
+  background-color: #0027D5;
+  border: 1px solid #0027D5;
+  border-radius: 20px;
+  margin-left: 8px;  
+  padding: 8px;
+  font-size: 16px;
+}
+.banner .into h2{
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.5;
+}
+.content{
+  margin: 0 auto;
+  max-width: 636px;
+  padding: 50px 0px 80px 0;
+}
+.content .row {
+  padding-bottom: 30px;
+}
+.content .row h2{
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.5;
   color: #0027D5;
+  padding-bottom: 10px;
 }
-.latest-article{
-  display: flex;
-  border: 1px solid #000;
+.content .row p{
+  font-weight: 500;
+  line-height: 1.5;
 }
-.latest-article .img{
-  width: 50%;
-
+.content .row img{
+  padding-bottom: 20px;
 }
-img {
-  width: 100%;
-  vertical-align: middle;
-}
-.article-list{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 80px 24px;
-  margin: 0 auto;  
-  max-width: 1296px;
-}
-.article-list li{
-  width: 416px;
-}
-.article-list li > *{
+.content .row h3{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
-.tag{
-  font-size: 24px;  
-  color: #0027D5;
-  padding-right: 8px;
+.content .row ol li{
+  list-style-type: decimal;
+  list-style-position: inside;
+  margin-bottom: 10px; 
 }
-.popular{
-  padding:5px;
-  background: #0027D5;
-  color: white;
-  border-radius: 50px;
-  border: 1px solid #0027D5;  
+.content .row ul{
+  list-style: disc;
+  list-style-position: inside;
+  margin-bottom: 10px;
 }
-.title{
-  font-size: 28px;
+.content .row ul li{
+  line-height: 1.5;
+}
+.summary {  
+  border-radius: 24px;
+  background-color: #EDEDED;
+  padding: 24px;
+  
+}
+.summary p{
   font-weight: 700;
-}
-.description{
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-bottom: 20px;
-  color: #6e6e6d;
-}
-.more{
-  border: 1px solid #6e6e6d;
-  padding: 8px 16px;
-  border-radius: 80px;  
-}
-.more:hover{
-  background: #000;
-  color: white;
-}
-a{
-  display: inline-block;
-  text-decoration: none;
-  color: #4B4B4B;
+  line-height: 1.5;
 }
 .pager{
-  margin-top: 50px;
-  margin-bottom: 50px;
-  padding-bottom: 50px;
-  border-bottom: 1px solid #6C757D;
-}
-.pagination {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 0px 24px;
+  justify-content: space-between;
 }
-.pagination li a {
-  font-weight: 500;
+.pager li a{
+  color: #4B4B4B;
+  border: 1px solid #000000;
+  border-radius: 40px;
+  padding: 8px 16px;
+  margin-bottom: 80px;
+  gap: 4px;
+  text-decoration: none;
 }
-.pagination li a:hover {
-    font-size: 24px;
-    line-height: 1;
-}
-.pagination .active {
-  color: #0027D5;
+.pager li a:hover{
+  background: yellow;
 }
 .contact {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 1296px;
-  margin: 0 auto;
-  padding: 0 5%;
-}
-.email {
-  font-size: 32px;
+  justify-content: space-around;
   padding: 80px 0;
+  border-top: 1px solid #000;
+}
+.email a{
+  font-size: 32px;
+  color: #000;
+  padding: 80px 0;
+  text-decoration: none;
+}
+.social{
+  display: flex;
+  justify-content: center;
+}
+.social a{
+  text-decoration: none;
 }
 .footer {
   padding: 24px 0;
   text-align: center;
+}
+@media (max-width: 768px) {
+	.menu {
+		flex-direction: column;
+		align-items: center;
+	}
+	.banner .into {
+		padding: 16px;
+	}
+	.email a {
+		font-size: 20px;
+		padding: 0;
+	}
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+  }
 }
