--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ body{
 .content .row p{
   font-weight: 500;
   line-height: 1.5;
+  padding-bottom: 10px;
 }
 .content .row img{
   padding-bottom: 20px;
@@ -134,24 +135,33 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.content .row ol{
+  margin-bottom: 20px;
+}
 .content .row ol li{
   list-style-type: decimal;
   list-style-position: inside;
+  text-indent: -1.5rem;
+  padding-left: 1.5em;
   margin-bottom: 10px; 
 }
 .content .row ul{
   list-style: disc;
   list-style-position: inside;
-  margin-bottom: 10px;
+  padding-left: 0.5rem;
+  margin-bottom: 20px;
 }
 .content .row ul li{
+  text-indent: -1.5rem;
+  padding-left: 1.5em;
   line-height: 1.5;
 }
 .summary {  
   border-radius: 24px;
   background-color: #EDEDED;
   padding: 24px;
-  
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .summary p{
   font-weight: 700;
@@ -185,7 +195,7 @@ body{
   padding: 80px 0;
   text-decoration: none;
 }
-.social{
+.social ul{
   display: flex;
   justify-content: center;
 }
@@ -196,21 +206,32 @@ body{
   padding: 24px 0;
   text-align: center;
 }
+
 @media (max-width: 768px) {
 	.menu {
-		flex-direction: column;
 		align-items: center;
 	}
-	.banner .into {
-		padding: 16px;
-	}
-	.email a {
-		font-size: 20px;
-		padding: 0;
-	}
+  .banner{
+    flex-wrap: wrap;
+  }
+  .banner img{
+    max-width: 100%;
+    display: block;
+  }
+  .banner .into{  
+    max-width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .content{
+    padding: 64px 12px;
+  }
   img {
     max-width: 100%;
     height: auto;
     display: block;
+  }
+  .contact {
+    display: none;
   }
 }
